# heredian-rust

./: Cargo.toml  README.md  TODO.md
allegro/: Cargo.toml  build.rs
allegro/src/: ffi.rs
allegro/src/ffi/: audio.rs  audiocodecs.rs  color.rs  display.rs  events.rs  file.rs  font.rs  fullscreen.rs  graphics.rs  image.rs  keyboard.rs  primitives.rs  threads.rs  time.rs  timer.rs  transformations.rs  utf8.rs
heredian-client/: Cargo.toml  build.rs
heredian-client/assets/Characters/Gauss/Configs/: act_attack.txt  act_dead.txt  act_mov.txt  act_run.txt  act_stop.txt  config.txt
heredian-client/assets/Characters/James/Configs/: act_attack.txt  act_dead.txt  act_mov.txt  (+3 more)
heredian-client/assets/Configs/: Ambients.txt  Chars.txt  Intro.txt  Lifeless.txt
heredian-client/assets/Stages/Fase1/: config.txt
heredian-client/assets/Stages/Fase2/: config.txt
heredian-client/assets/Stages/Fase3/: config.txt
heredian-client/assets/Stages/Fase4/: config.txt
heredian-client/assets/Stages/Fase5/: config.txt
heredian-client/assets/Stages/Teste/: config.txt
heredian-client/assets/Stages/Teste2/: config.txt
heredian-client/src/: heredian.rs  main.rs
heredian-client/src/heredian/: allegro_safe.rs  game_lib.rs  game_screen.rs  intro_screen.rs  loading_screen.rs  menu_screen.rs  select_char_screen.rs  splash_screen.rs  structs.rs  test_character.rs
heredian-lib/: Cargo.toml
heredian-lib/src/: allegro_safe.rs  file_manager.rs  lib.rs  net.rs
heredian-server/: Cargo.toml
heredian-server/assets/Configs/: Ambients.txt  Enemies.txt
heredian-server/src/: main.rs
(+37 files in other folders)
