[package]
name = "heredian-server"
version = "0.1.0"
authors = ["Celso V Leite <celsovl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
libc = "0.2.0"
heredian-lib = { path = "../heredian-lib" }
